--- a/src/app/camarero/list-pedidos/list-pedidos.component.html
+++ b/src/app/camarero/list-pedidos/list-pedidos.component.html
@@ -46,7 +46,7 @@
         </div>
 
         <ng-template pTemplate="footer" >
-          <th style="position: relative; right: 15%; top: 19px;">
+          <th class="buscador" style="position: relative; right: 15%; top: 19px;">
             <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')" placeholder="Buscar" />
           </th>
         </ng-template>
