--- a/src/app/dueno/list-productos/list-productos.component.html
+++ b/src/app/dueno/list-productos/list-productos.component.html
@@ -42,7 +42,7 @@
         </ng-template>
 
         <ng-template pTemplate="footer" >
-          <th style="position: relative; left: 70%; top: 19px;">
+          <th class="buscador" style="position: relative; left: 70%; top: 19px;">
             <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')" placeholder="Buscar" />
           </th>
         </ng-template>
